...
          FilledButton(
            onPressed: () {
              if (formKey.currentState?.validate() ?? false) {
                Navigator.of(context).pop(true);
              }
            },
            child: const Text('Update'),
          ),
        ],
      ),
    );

    if (result != true) return;
...
